--- a/.env.example
+++ b/.env.example
@@ -63,3 +63,6 @@ AWS_BUCKET=
 AWS_USE_PATH_STYLE_ENDPOINT=false
 
 VITE_APP_NAME="${APP_NAME}"
+
+ONEAPI_BASE_URL=http://proxy.onesender.net/api/v1
+ONEAPI_KEY=
